--- a/tools.html
+++ b/tools.html
@@ -39,16 +39,16 @@
         </ul>
 
         <h1>Aircraft</h1>
-        <ul class="text-left"> <h5> Our main workhorse for Thermography and Lidar measurements is the DJI Matrice 300 RTK with a H20T and L1 attachments.For visual imagery we use the DJI Mavic 2 Pro which offers 4k imagery for object detection and tracking </ul> </h5>
+        <ul class="text-left"> <h5> Our main workhorse for Thermography and Lidar measurements is the DJI Matrice 300 RTK with a H20T and L1 attachments. For visual imagery, we use the DJI Mavic 2 Pro which offers 4k imagery for object detection and tracking </ul> </h5>
 
         <h1>Remote Sensing</h1>
-        <ul class="text-left"> <h5> We see life as a spectrum of energy and we offer unique capabilities to measure this energy using first principals and proven sensor technologies. Our clients benefit from our extensive experience with Sony CMOS image sensors, TDK InvenSense microphones, Texas Instruments PhotoDiodes and Pyreos Pyroelectric sensors. </ul> </h5>
+        <ul class="text-left"> <h5> We see life as a spectrum of energy and we offer unique capabilities to measure this energy using first principals and proven sensor technologies. Our clients benefit from our extensive experience with Sony CMOS image sensors, TDK InvenSense microphones, Texas Instruments photodiodes and Pyreos pyroelectric sensors. </ul> </h5>
 
         <h1>Edge Computing</h1>
         <ul class="text-left"> <h5> We believe in the power of the Nvidia Jetson for measuring and quantifying our work at the edge. We have also found value in coupling the Raspberry Pi and Google Coral TPU for low-power remote sensing applications. </ul> </h5>
 
         <h1>Our Partners</h1>
-        <ul class="text-left"> <h5> Our Additive Manufacturing and EMS Service partners allow us to transform our proof-of-concepts into minimal viable products that can scale to meet the needs of local municipalities, small businesses and large corporations. </ul> </h5>
+        <ul class="text-left"> <h5> Our additive manufacturing and EMS service partners allow us to transform a proof-of-concept into a minimal viable product that can scale to meet the needs of local municipalities, small businesses and large corporations. </ul> </h5>
 
       </main>
 
